Changes from 3.0.0 to 3.0.1
---------------------------

** Bug

   [FELIX-3005] - Compatibility API does not add components in DependencyManager

** Improvement

Release 3.0.0
-------------

Initial version.